--- a/app/src/main/res/layout/activity_create_stop_point.xml
+++ b/app/src/main/res/layout/activity_create_stop_point.xml
@@ -1,37 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateStopPoint"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".CreateStopPointActivity">
+
     <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/map"
-        tools:context=".MapsActivity"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
+        tools:context=".MapsActivity" />
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/map_layout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_gravity="top">
+        android:layout_margin="5dp"
+        android:background="@drawable/map_search_location"
+        android:focusableInTouchMode="true">
+
         <ImageView
+            android:id="@+id/map_search_ic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_search_black_24dp"
-            />
+            android:layout_centerVertical="true"
+            app:srcCompat="@drawable/ic_search_black_24dp" />
+
         <EditText
             android:id="@+id/edt_search_addr"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="Tim kiem dia diem ..."
-            />
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/map_search_ic"
+            android:background="@null"
+            android:hint="Tìm kiếm địa điểm ..."
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:maxLines="1"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/map_btn_cur_location"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/map_layout1"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"
+        android:background="@drawable/btn_gps_bg" />
+
+    <!--    <fragment android:id="@+id/autocomplete_fragment"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
+    <!--        android:layout_below="@id/map_layout1"-->
+    <!--        />-->
+
+</RelativeLayout>
