--- a/app/src/main/res/layout/activity_create_stop_point.xml
+++ b/app/src/main/res/layout/activity_create_stop_point.xml
@@ -33,8 +33,7 @@
             android:id="@+id/edt_search_addr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/map_search_ic"
+            android:layout_marginLeft="0dp"
             android:background="@null"
             android:hint="Tìm kiếm địa điểm ..."
             android:imeOptions="actionSearch"
@@ -50,10 +49,13 @@
         android:id="@+id/map_btn_cur_location"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_below="@id/map_layout1"
         android:layout_alignParentEnd="false"
         android:layout_alignParentRight="true"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="13dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/btn_gps_bg" />
 
     <!--    <fragment android:id="@+id/autocomplete_fragment"-->
