create stop point: add timepicker, datepicker, check valid input

--- a/app/src/main/res/layout/dialog_create_stop_point.xml
+++ b/app/src/main/res/layout/dialog_create_stop_point.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <Button
+        <ImageView
             android:id="@+id/map_btn_close_dialog"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/ic_map_black_24dp"
+            app:srcCompat="@drawable/ic_map_black_24dp"
             />
     </RelativeLayout>
     <ScrollView
@@ -214,7 +216,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/btn_create__stop_point"
+                android:id="@+id/btn_create_stop_point"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
