do something thong said :v

--- a/app/src/main/res/layout/activity_create_stop_point.xml
+++ b/app/src/main/res/layout/activity_create_stop_point.xml
@@ -54,7 +54,10 @@
         android:layout_alignParentEnd="false"
         android:layout_alignParentRight="true"
         android:layout_margin="10dp"
-        android:background="@drawable/btn_gps_bg" />
+        app:srcCompat="@drawable/btn_gps_bg"
+
+        />
+
 
     <!--    <fragment android:id="@+id/autocomplete_fragment"-->
     <!--        android:layout_width="match_parent"-->
@@ -63,13 +66,13 @@
     <!--        android:layout_below="@id/map_layout1"-->
     <!--        />-->
 
-    <Button
+    <ImageView
         android:id="@+id/map_btn_show_dialog"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_margin="20dp"
-        android:background="@drawable/btn_show_dialog_stop_point_bg"
+        app:srcCompat="@drawable/btn_show_dialog_stop_point_bg"
         />
 
 </RelativeLayout>
