--- a/app/src/main/res/layout/dialog_create_stop_point.xml
+++ b/app/src/main/res/layout/dialog_create_stop_point.xml
@@ -49,6 +49,20 @@
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/roundedborder2"
                 android:padding="15dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="Loại dịch vụ (*):" />
+
+            <Spinner
+                android:background="@drawable/roundedborder2"
+                android:padding="15dp"
+                android:layout_marginBottom="20dp"
+                android:id="@+id/spn_create_stop_point_service"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -69,13 +83,13 @@
                 android:layout_marginBottom="10dp"
                 android:text="Tỉnh / Thành phố (*):" />
 
-            <EditText
-                android:id="@+id/create_stop_point_province"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+            <Spinner
                 android:background="@drawable/roundedborder2"
-                android:padding="15dp" />
+                android:padding="15dp"
+                android:layout_marginBottom="20dp"
+                android:id="@+id/spn_create_stop_point_province"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
 
 
