--- a/app/src/main/res/layout/dialog_create_stop_point.xml
+++ b/app/src/main/res/layout/dialog_create_stop_point.xml
@@ -237,7 +237,7 @@
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/login_btn_bg"
                 android:padding="15dp"
-                android:text="Tạo"
+                android:text="Lưu"
                 android:textAllCaps="false"
                 android:textColor="#ffffff"
                 android:textSize="18sp" />
