--- a/app/src/main/res/layout/dialog_create_stop_point.xml
+++ b/app/src/main/res/layout/dialog_create_stop_point.xml
@@ -32,9 +32,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Thêm điểm dừng"
+                android:text="Thông tin điểm dừng"
                 android:textColor="#068f41"
-                android:textSize="35sp" />
+                android:textSize="30sp" />
 
             <TextView
                 android:layout_width="wrap_content"
