--- a/app/src/main/res/layout/dialog_create_stop_point.xml
+++ b/app/src/main/res/layout/dialog_create_stop_point.xml
@@ -13,6 +13,19 @@
             android:layout_height="40dp"
             app:srcCompat="@drawable/ic_map_black_24dp"
             />
+        <TextView
+            android:id="@+id/map_btn_cancel_edit_action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="Hủy sửa"
+            android:textSize="18sp"
+            android:layout_centerVertical="true"
+            android:padding="5dp"
+            android:textAllCaps="true"
+            android:textColor="@color/colorCustomPrimaryLighter"
+            android:visibility="gone"
+            />
     </RelativeLayout>
     <ScrollView
         android:layout_width="match_parent"
