--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,26 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_user_trip"
+        android:name="com.example.tours.ui.home.HomeFragment"
+        android:label="@string/title_user_trip"
+        tools:layout="@layout/fragment_user_trip" />
+
+    <fragment
+        android:id="@+id/navigation_map"
         android:name="com.example.tours.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:label="@string/title_map"
+        tools:layout="@layout/fragment_map" />
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.tours.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+
+    <fragment
+        android:id="@+id/navigation_user_settings"
+        android:name="com.example.tours.ui.notifications.NotificationsFragment"
+        android:label="@string/title_user_settings"
+        tools:layout="@layout/fragment_user_settings" />
 </navigation>
