--- a/app/src/main/res/layout/dialog_create_stop_point.xml
+++ b/app/src/main/res/layout/dialog_create_stop_point.xml
@@ -160,48 +160,6 @@
                     android:padding="15dp" />
 
             </LinearLayout>
-
-            <TextView
-                android:layout_marginRight="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Thời điểm đi (*):" />
-
-            <LinearLayout
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                android:layout_marginBottom="15dp"
-                android:weightSum="2"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:layout_weight="1"
-                    android:id="@+id/create_stop_point_leave_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:focusableInTouchMode="false"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/roundedborder2"
-                    android:padding="15dp"
-                    android:hint="Giờ"
-                    />
-
-                <EditText
-                    android:layout_weight="1"
-                    android:id="@+id/create_stop_point_leave_date"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:focusableInTouchMode="false"
-                    android:layout_marginLeft="5dp"
-                    android:background="@drawable/roundedborder2"
-                    android:padding="15dp"
-                    android:hint="Ngày"
-                    />
-
-            </LinearLayout>
-
             <TextView
                 android:layout_marginRight="5dp"
                 android:layout_width="match_parent"
@@ -241,6 +199,48 @@
                     android:hint="Ngày"/>
 
             </LinearLayout>
+            <TextView
+                android:layout_marginRight="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Thời điểm rời đi (*):" />
+
+            <LinearLayout
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:layout_marginBottom="15dp"
+                android:weightSum="2"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:layout_weight="1"
+                    android:id="@+id/create_stop_point_leave_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:focusableInTouchMode="false"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/roundedborder2"
+                    android:padding="15dp"
+                    android:hint="Giờ"
+                    />
+
+                <EditText
+                    android:layout_weight="1"
+                    android:id="@+id/create_stop_point_leave_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:focusableInTouchMode="false"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/roundedborder2"
+                    android:padding="15dp"
+                    android:hint="Ngày"
+                    />
+
+            </LinearLayout>
+
+
 
             <Button
                 android:id="@+id/btn_create_stop_point"
