--- a/app/src/main/res/layout/fragment_tour_comment.xml
+++ b/app/src/main/res/layout/fragment_tour_comment.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.TourCommentFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/list_view_tour_comment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:divider="@null"
+        />
 
 </FrameLayout>
