--- a/app/src/main/res/layout/fragment_tour_member.xml
+++ b/app/src/main/res/layout/fragment_tour_member.xml
@@ -5,10 +5,43 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.TourMemberFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:paddingLeft="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/btn_dialog_invite_member"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/ic_person_add_black_24dp"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="10dp"
+                    android:text="Người tham gia"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorCustomPrimary"/>
+            </LinearLayout>
+
+            <ListView
+                android:id="@+id/list_view_tour_member"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@null" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </FrameLayout>
