--- a/app/src/main/res/layout/dialog_invite_member.xml
+++ b/app/src/main/res/layout/dialog_invite_member.xml
@@ -6,7 +6,16 @@
     android:paddingTop="20dp"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
+    android:background="@drawable/dialog_invite_member_bg"
     >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/edt_hint_search_member"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:padding="10dp"
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,22 +23,28 @@
         android:orientation="horizontal"
         android:focusableInTouchMode="true"
         android:gravity="center"
+        android:layout_marginBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         >
 
         <EditText
             android:id="@+id/edt_invite_member"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:background="@drawable/roundedborder2"
-            android:hint="Tìm kiếm tài khoản"
             android:maxLines="1"
-            android:padding="10dp"
+            android:layout_centerVertical="true"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:inputType="text"
             android:imeOptions="actionSearch"/>
         <ImageView
             android:id="@+id/btn_seacrh_member"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:background="@drawable/ic_search_black_24dp"
             />
@@ -39,5 +54,6 @@
         android:id="@+id/list_view_search_member"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#FFFFFF"
         android:divider="@null"/>
 </LinearLayout>
