--- a/app/src/main/res/layout/list_view_user_search_item.xml
+++ b/app/src/main/res/layout/list_view_user_search_item.xml
@@ -20,7 +20,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/unknown_user"
-            app:civ_border_color="#FF000000"
+            app:civ_border_color="@color/colorCustomPrimary"
             app:civ_border_width="2dp" />
 
         <LinearLayout
