--- a/app/src/main/res/layout/listview_usertrip_item.xml
+++ b/app/src/main/res/layout/listview_usertrip_item.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="20dp"
     android:paddingTop="10dp"
     android:paddingRight="20dp"
-    android:paddingBottom="10dp">
+    android:paddingBottom="10dp"
+    android:descendantFocusability="blocksDescendants">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -113,7 +114,9 @@
                 android:paddingLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:scaleType="fitXY"
-                app:srcCompat="@drawable/ic_edit_regular" />
+                app:srcCompat="@drawable/ic_edit_regular"
+                android:focusable="false"
+                android:focusableInTouchMode="false"/>
 
         </LinearLayout>
 
