--- a/app/src/main/res/layout/activity_update_tour.xml
+++ b/app/src/main/res/layout/activity_update_tour.xml
@@ -8,8 +8,6 @@
     tools:context=".MainActivity">
 
 
-
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -21,13 +19,13 @@
             android:padding="30dp">
 
             <TextView
-                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="72dp"
                 android:layout_gravity="center_horizontal"
                 android:text="Update Tour"
                 android:textColor="#068f41"
-                android:textSize="35sp" />
+                android:textSize="35sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -44,55 +42,55 @@
                 android:padding="15dp" />
 
             <LinearLayout
-                android:layout_marginBottom="10dp"
-                android:weightSum="2"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <TextView
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
                     android:text="Ngày bắt đầu :" />
 
                 <TextView
-                    android:layout_marginLeft="5dp"
-                    android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
                     android:text="Ngày kết thúc :" />
 
             </LinearLayout>
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:orientation="horizontal"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:layout_marginBottom="15dp"
-                android:weightSum="2"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:weightSum="2">
 
                 <EditText
-                    android:layout_weight="1"
                     android:id="@+id/updatetour_start_date"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:focusableInTouchMode="false"
                     android:layout_marginRight="5dp"
+                    android:layout_weight="1"
                     android:background="@drawable/roundedborder2"
+                    android:focusableInTouchMode="false"
                     android:padding="15dp" />
 
                 <EditText
-                    android:layout_weight="1"
                     android:id="@+id/updatetour_end_date"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:focusableInTouchMode="false"
                     android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
                     android:background="@drawable/roundedborder2"
+                    android:focusableInTouchMode="false"
                     android:padding="15dp" />
 
             </LinearLayout>
@@ -104,118 +102,117 @@
                 android:text="Chế độ:" />
 
             <RadioGroup
-                android:layout_marginBottom="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:orientation="horizontal"
                 android:weightSum="2">
 
                 <RadioButton
-                    android:layout_marginRight="5dp"
-                    android:paddingLeft="20dp"
                     android:id="@+id/updatetour_rbtn_private"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
+                    android:paddingLeft="20dp"
                     android:text="Riêng tư" />
 
                 <RadioButton
-                    android:layout_marginLeft="5dp"
-                    android:paddingLeft="20dp"
                     android:id="@+id/updatetour_rbtn_public"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
                     android:layout_weight="1"
+                    android:paddingLeft="20dp"
                     android:text="Công khai" />
             </RadioGroup>
 
 
             <LinearLayout
-                android:layout_marginBottom="10dp"
-                android:weightSum="2"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <TextView
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
                     android:text="Số người lớn:" />
 
                 <TextView
-                    android:layout_marginLeft="5dp"
-                    android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
                     android:text="Số trẻ em:" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:weightSum="2"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <EditText
-                    android:text="0"
-                    android:inputType="number"
-                    android:layout_weight="1"
                     android:id="@+id/updatetour_adult"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
                     android:layout_marginRight="5dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_weight="1"
                     android:background="@drawable/roundedborder2"
-                    android:padding="15dp" />
+                    android:inputType="number"
+                    android:padding="15dp"
+                    android:text="0" />
 
                 <EditText
-                    android:text="0"
-                    android:inputType="number"
-                    android:layout_weight="1"
                     android:id="@+id/updatetour_child"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
                     android:layout_marginBottom="20dp"
+                    android:layout_weight="1"
                     android:background="@drawable/roundedborder2"
-                    android:padding="15dp" />
+                    android:inputType="number"
+                    android:padding="15dp"
+                    android:text="0" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginBottom="10dp"
-                android:weightSum="2"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <TextView
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
                     android:text="Giá nhỏ nhất:" />
 
                 <TextView
-                    android:layout_marginLeft="5dp"
-                    android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
                     android:text="Giá lớn nhất:" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:weightSum="2"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <EditText
-                    android:text="0"
                     android:id="@+id/updatetour_min_cost"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -224,23 +221,79 @@
                     android:layout_weight="1"
                     android:background="@drawable/roundedborder2"
                     android:inputType="number"
-                    android:padding="15dp" />
+                    android:padding="15dp"
+                    android:text="0" />
 
                 <EditText
-                    android:text="0"
-                    android:inputType="number"
-                    android:layout_weight="1"
                     android:id="@+id/updatetour_max_cost"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
                     android:layout_marginBottom="20dp"
+                    android:layout_weight="1"
                     android:background="@drawable/roundedborder2"
-                    android:padding="15dp" />
+                    android:inputType="number"
+                    android:padding="15dp"
+                    android:text="0" />
 
             </LinearLayout>
 
+
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="Trạng thái:" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:id="@+id/updatetour_rbtn_canceled"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="20dp"
+                    android:text="Đã hủy" />
+
+                <RadioButton
+                    android:id="@+id/updatetour_rbtn_open"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="20dp"
+                    android:text="Đang mở" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:id="@+id/updatetour_rbtn_started"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="20dp"
+                    android:text="Đã bắt đầu" />
+
+                <RadioButton
+                    android:id="@+id/updatetour_rbtn_closed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="20dp"
+                    android:text="Đã đóng" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_marginTop="10dp"
                 android:id="@+id/updatetour_upload_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -260,8 +313,6 @@
                 android:textAllCaps="false"
                 android:textColor="#ffffff"
                 android:textSize="18sp" />
-
-
 
 
         </LinearLayout>
