--- a/app/src/main/res/layout/listview_tour_item.xml
+++ b/app/src/main/res/layout/listview_tour_item.xml
@@ -105,6 +105,7 @@
             </LinearLayout>
 
             <ImageButton
+                android:id="@+id/listtouritem_btn_clone_tour"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
