--- a/app/src/main/res/layout/activity_create_tour.xml
+++ b/app/src/main/res/layout/activity_create_tour.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="72dp"
                 android:layout_gravity="center_horizontal"
-                android:text="Create Tour"
+                android:text="Thông tin chuyến đi"
                 android:textColor="#068f41"
                 android:textSize="35sp" />
 
