--- a/app/src/main/res/layout/activity_tour_info.xml
+++ b/app/src/main/res/layout/activity_tour_info.xml
@@ -40,4 +40,16 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_comment"
+        app:srcCompat="@drawable/ic_chat_bubble_black_24dp"
+        app:fabSize="normal"
+        android:visibility="gone"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_anchor="@id/view_pager"
+        app:layout_anchorGravity="bottom|right|end" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
