+ forgot password layout, api (complete)

--- a/app/src/main/res/layout/dialog_update_password.xml
+++ b/app/src/main/res/layout/dialog_update_password.xml
@@ -21,9 +21,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="72dp"
                 android:layout_gravity="center_horizontal"
-                android:text="Update Password"
+                android:text="Thay đổi mật khẩu"
                 android:textColor="#068f41"
-                android:textSize="35sp"
+                android:textSize="30sp"
                 android:textStyle="bold" />
 
             <TextView
