--- a/app/src/main/res/layout/activity_update_tour.xml
+++ b/app/src/main/res/layout/activity_update_tour.xml
@@ -22,9 +22,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="72dp"
                 android:layout_gravity="center_horizontal"
-                android:text="Update Tour"
+                android:text="Thông tin chuyến đi"
                 android:textColor="#068f41"
-                android:textSize="35sp"
+                android:textSize="30sp"
                 android:textStyle="bold" />
 
             <TextView
