--- a/app/src/main/res/layout/dialog_comment_tour_info.xml
+++ b/app/src/main/res/layout/dialog_comment_tour_info.xml
@@ -65,7 +65,7 @@
             android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            android:background="@drawable/ic_send_black_24dp"
+            app:srcCompat="@drawable/ic_send_black_24dp"
             />
     </LinearLayout>
 
