--- a/app/src/main/res/layout/fragment_tour_member.xml
+++ b/app/src/main/res/layout/fragment_tour_member.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.main.TourMemberFragment">
 
 
@@ -20,11 +21,11 @@
             android:paddingLeft="10dp"
             android:background="@color/white">
 
-            <Button
+            <ImageView
                 android:id="@+id/btn_dialog_invite_member"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="@drawable/ic_person_add_black_24dp" />
+                app:srcCompat="@drawable/ic_person_add_black_24dp" />
 
             <TextView
                 android:layout_width="0dp"
