+ tour notification (message)

--- a/app/src/main/res/layout/dialog_create_notification_on_road.xml
+++ b/app/src/main/res/layout/dialog_create_notification_on_road.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cảnh báo tốc độ"
+        android:text="Giới hạn tốc độ"
         android:textAllCaps="true"
         android:textSize="18sp"
         android:textColor="@color/colorCustomPrimary"
