--- a/app/src/main/res/layout/dialog_list_notification.xml
+++ b/app/src/main/res/layout/dialog_list_notification.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorCustomPrimary"
-        app:title="Bình luận"
+        app:title="Thông báo"
         app:titleTextColor="@color/white"
         />
     <ListView
