--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -26,7 +26,20 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 app:srcCompat="@drawable/ic_warning_black_24dp"
-                android:layout_margin="5dp"
+                android:layout_margin="10dp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/circle_bg_btn">
+            <ImageView
+                android:id="@+id/show_notification_list"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:srcCompat="@drawable/ic_chat_black_24dp"
+                android:layout_margin="10dp"
                 />
         </LinearLayout>
     </LinearLayout>
@@ -58,6 +71,19 @@
                 android:layout_height="30dp"
                 android:layout_margin="5dp"
                 app:srcCompat="@drawable/ic_directions_black_24dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/circle_bg_btn"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:id="@+id/btn_show_member_list"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="5dp"
+                app:srcCompat="@drawable/ic_member_white_24dp" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
