--- a/app/src/main/res/layout/dialog_stop_point_info.xml
+++ b/app/src/main/res/layout/dialog_stop_point_info.xml
@@ -1,161 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/roundedborder2"
-    android:padding="5dp"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:orientation="vertical"
+    android:padding="5dp">
 
-    <TextView
-        android:textStyle="bold"
-        android:textColor="#068f41"
-        android:textSize="25sp"
-        android:id="@+id/stop_point_info_name"
-        android:text="NameTour"
-        android:padding="5dp"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/stop_point_info_name"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="NameTour"
+            android:textColor="#068f41"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/add_suggested_stop_point"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/ic_add_black_24dp"
+            />
+    </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
-        android:background="#D6D6D6"/>
+        android:background="#D6D6D6" />
+
     <LinearLayout
-        
-        android:orientation="horizontal"
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <ImageView
-            android:padding="5dp"
-            app:srcCompat="@drawable/ic_tag_solid"
             android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_tag_solid" />
 
         <TextView
-            android:textColor="#1A1818"
-            android:paddingTop="5dp"
-            android:paddingLeft="5dp"
             android:id="@+id/stop_point_info_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
             android:text="Type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:textColor="#1A1818" />
     </LinearLayout>
 
     <LinearLayout
-        
-        android:orientation="horizontal"
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <ImageView
-            android:padding="5dp"
-            app:srcCompat="@drawable/ic_maps_and_flags"
             android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_maps_and_flags" />
 
         <TextView
-            android:textColor="#1A1818"
-            android:paddingTop="5dp"
-            android:paddingLeft="5dp"
             android:id="@+id/stop_point_info_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
             android:text="Address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:textColor="#1A1818" />
     </LinearLayout>
 
     <LinearLayout
-        
-        android:orientation="horizontal"
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <ImageView
-            android:padding="5dp"
-            app:srcCompat="@drawable/ic_city_solid"
             android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_city_solid" />
 
         <TextView
-            android:textColor="#1A1818"
-            android:paddingTop="5dp"
-            android:paddingLeft="5dp"
             android:id="@+id/stop_point_info_provice_city"
-            android:text="City"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
+            android:text="City"
+            android:textColor="#1A1818" />
     </LinearLayout>
 
     <LinearLayout
-        
-        android:orientation="horizontal"
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <ImageView
-            android:padding="5dp"
-            app:srcCompat="@drawable/ic_money_bag"
             android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_money_bag" />
 
         <TextView
-            android:textColor="#1A1818"
-            android:paddingTop="5dp"
-            android:paddingLeft="5dp"
             android:id="@+id/stop_point_info_min_cost"
-            android:text="MinCost"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
+            android:text="MinCost"
+            android:textColor="#1A1818" />
 
         <TextView
-            android:textColor="#1A1818"
-            android:paddingTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:paddingLeft="5dp"
+            android:paddingTop="5dp"
             android:paddingRight="10dp"
             android:text=" - "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textColor="#1A1818" />
 
         <TextView
-            android:textColor="#1A1818"
-            android:paddingTop="5dp"
             android:id="@+id/stop_point_info_max_cost"
-            android:text="MaxCost"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:text="MaxCost"
+            android:textColor="#1A1818" />
 
     </LinearLayout>
 
 
-
     <LinearLayout
-        
-        android:orientation="horizontal"
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <ImageView
-            android:padding="5dp"
-            app:srcCompat="@drawable/ic_plane_arrival_solid"
             android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_plane_arrival_solid" />
 
         <TextView
-            android:textColor="#1A1818"
+            android:id="@+id/stop_point_info_arrive"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:paddingLeft="5dp"
-            android:id="@+id/stop_point_info_arrive"
             android:text="Arrive"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:textColor="#1A1818" />
     </LinearLayout>
+
     <LinearLayout
 
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <ImageView
-            android:padding="5dp"
-            app:srcCompat="@drawable/ic_plane_departure_solid"
             android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_plane_departure_solid" />
 
         <TextView
             android:id="@+id/stop_point_info_leave"
